# ledger-lens-api

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  ledgerai.yaml  main.py  pyproject.toml  requirements.txt
generated-api/: README.md  openapi.yaml  setup.cfg
generated-api/.openapi-generator/: FILES
generated-api/src/openapi_server/: main.py
generated-api/src/openapi_server/apis/: analyst_reports_api.py  analyst_reports_api_base.py  auth_api.py  auth_api_base.py  chat_api.py  chat_api_base.py  companies_api.py  companies_api_base.py  compare_api.py  compare_api_base.py  dashboard_api.py  dashboard_api_base.py  documents_api.py  documents_api_base.py  mcp_api.py  mcp_api_base.py  rag_api.py  rag_api_base.py  scheduler_api.py  scheduler_api_base.py  watchlist_api.py  watchlist_api_base.py
generated-api/src/openapi_server/models/: analyst_report.py  analyst_report_upload_response.py  chat_history_item.py  chat_request.py  chat_response.py  company.py  company_details.py  company_sentiment.py  compare_request.py  compare_response.py  compare_source.py  dashboard_response.py  dashboard_update.py  document.py  document_details.py  download_document_response.py  error_response.py  inline_object.py  login_request.py  login_response.py  login_user.py  mcp_announcement.py  profile_response.py  (+11 more)
generated-api/tests/: test_analyst_reports_api.py  test_auth_api.py  test_chat_api.py  test_companies_api.py  test_compare_api.py  test_dashboard_api.py  test_documents_api.py  test_mcp_api.py  test_rag_api.py  test_scheduler_api.py  test_watchlist_api.py
(+73 files in other folders)
