[project]
name = "ledger-lens-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=4.2.1",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]
