[metadata]
name = openapi_server
version = 1.0.0
description = Financial Document Q&amp;A Assistant API
long_description = file: README.md
keywords = OpenAPI LedgerLens.ai Platform API
python_requires = >= 3.10.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
